--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/sballew17/myFlix-client#readme",
     "dependencies": {
+        "axios": "^0.21.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
