--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "homepage": "https://github.com/sballew17/myFlix-client#readme",
     "dependencies": {
         "axios": "^0.21.1",
+        "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
