--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "homepage": "https://github.com/sballew17/myFlix-client#readme",
     "dependencies": {
         "axios": "^0.21.1",
-        "parcel": "^2.0.0-nightly.769",
+        "parcel": "latest",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-bootstrap": "^1.6.1",
