--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "redux-devtools-extension": "^2.13.9"
     },
     "devDependencies": {
-        "@parcel/transformer-sass": "^2.0.0-beta.3.1"
+        "@parcel/transformer-sass": "^2.0.0-nightly.771"
     },
     "type": "module"
 }
